[gd_scene load_steps=62 format=3 uid="uid://dfayifn15m681"]

[ext_resource type="Script" path="res://scritps/player.gd" id="1_27tse"]
[ext_resource type="Texture2D" uid="uid://0cibdvijofxb" path="res://assests/tiny hero/2/Idle.png" id="1_neiha"]
[ext_resource type="Texture2D" uid="uid://dkcxcqvuj4p1q" path="res://assests/tiny hero/2/Attack.png" id="2_8m8l3"]
[ext_resource type="Texture2D" uid="uid://ce7g50qxne822" path="res://assests/tiny hero/2/RunAttack.png" id="2_hnwwp"]
[ext_resource type="Texture2D" uid="uid://set085i4li6b" path="res://assests/tiny hero/2/3.png" id="3_4mthq"]
[ext_resource type="Texture2D" uid="uid://did8vbbkv8l04" path="res://assests/tiny hero/2/Jump.png" id="3_hn4q3"]
[ext_resource type="Texture2D" uid="uid://5lich53b2dv3" path="res://assests/tiny hero/2/Run.png" id="3_lmhut"]
[ext_resource type="Texture2D" uid="uid://flhmba0lmcix" path="res://assests/tiny hero/2/Walk.png" id="3_wydyc"]
[ext_resource type="Texture2D" uid="uid://crd2cjh5atrd0" path="res://assests/tiny hero/2/Walk_Run_Push_Dust_6.png" id="9_ejxnl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3l2ph"]
atlas = ExtResource("2_8m8l3")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs5y0"]
atlas = ExtResource("2_8m8l3")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2xu3"]
atlas = ExtResource("2_8m8l3")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf4oq"]
atlas = ExtResource("2_8m8l3")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lapd3"]
atlas = ExtResource("2_8m8l3")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jwux"]
atlas = ExtResource("2_8m8l3")
region = Rect2(210, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fru5"]
atlas = ExtResource("2_hnwwp")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_54p3s"]
atlas = ExtResource("2_hnwwp")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjp02"]
atlas = ExtResource("2_hnwwp")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn6n0"]
atlas = ExtResource("2_hnwwp")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d672"]
atlas = ExtResource("2_hnwwp")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vbu5"]
atlas = ExtResource("2_hnwwp")
region = Rect2(210, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5dxd"]
atlas = ExtResource("1_neiha")
region = Rect2(0, 0, 40, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dio7x"]
atlas = ExtResource("1_neiha")
region = Rect2(42, 0, 40, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2rit"]
atlas = ExtResource("1_neiha")
region = Rect2(84, 0, 40, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4np5a"]
atlas = ExtResource("1_neiha")
region = Rect2(126, 0, 40, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_yib3d"]
atlas = ExtResource("3_hn4q3")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo0ot"]
atlas = ExtResource("3_hn4q3")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3k06"]
atlas = ExtResource("3_hn4q3")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fmgp"]
atlas = ExtResource("3_hn4q3")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_huovh"]
atlas = ExtResource("3_hn4q3")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhmhn"]
atlas = ExtResource("3_hn4q3")
region = Rect2(210, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_17gri"]
atlas = ExtResource("3_hn4q3")
region = Rect2(252, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3e81"]
atlas = ExtResource("3_hn4q3")
region = Rect2(294, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqjcc"]
atlas = ExtResource("3_lmhut")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc1is"]
atlas = ExtResource("3_lmhut")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbvkq"]
atlas = ExtResource("3_lmhut")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_na7lh"]
atlas = ExtResource("3_lmhut")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn5mj"]
atlas = ExtResource("3_lmhut")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx1y3"]
atlas = ExtResource("3_lmhut")
region = Rect2(210, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_otqcf"]
atlas = ExtResource("3_wydyc")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4w4e"]
atlas = ExtResource("3_wydyc")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rik11"]
atlas = ExtResource("3_wydyc")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs54b"]
atlas = ExtResource("3_wydyc")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ghy"]
atlas = ExtResource("3_wydyc")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmjbe"]
atlas = ExtResource("3_wydyc")
region = Rect2(210, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_svgcy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l2ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs5y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2xu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf4oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lapd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jwux")
}],
"loop": false,
"name": &"Atack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fru5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54p3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjp02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn6n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d672")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vbu5")
}],
"loop": true,
"name": &"ShootRunAtack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5dxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dio7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2rit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4np5a")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yib3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo0ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3k06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fmgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huovh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhmhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17gri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3e81")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqjcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc1is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbvkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na7lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn5mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx1y3")
}],
"loop": false,
"name": &"runNormal",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_otqcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4w4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rik11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs54b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6ghy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmjbe")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hsjml"]
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8v4g5"]
atlas = ExtResource("3_4mthq")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3h72"]
atlas = ExtResource("3_4mthq")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijcp"]
atlas = ExtResource("3_4mthq")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_02qjc"]
atlas = ExtResource("3_4mthq")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_stt45"]
atlas = ExtResource("3_4mthq")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_udgpv"]
atlas = ExtResource("3_4mthq")
region = Rect2(210, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_rpj8t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v4g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3h72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02qjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stt45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udgpv")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h0mp3"]
atlas = ExtResource("9_ejxnl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_drpdh"]
atlas = ExtResource("9_ejxnl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqip0"]
atlas = ExtResource("9_ejxnl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ddtj"]
atlas = ExtResource("9_ejxnl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yfek"]
atlas = ExtResource("9_ejxnl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v7lt"]
atlas = ExtResource("9_ejxnl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ypfy6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0mp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drpdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqip0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ddtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yfek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v7lt")
}],
"loop": true,
"name": &"rundust",
"speed": 12.0
}]

[node name="player" type="CharacterBody2D" groups=["player"]]
position = Vector2(5, -21)
script = ExtResource("1_27tse")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-5, 8)
sprite_frames = SubResource("SpriteFrames_svgcy")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.747927
offset = Vector2(5, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 8)
shape = SubResource("CapsuleShape2D_hsjml")

[node name="shootAnim" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-6, 10)
rotation = -0.00820945
sprite_frames = SubResource("SpriteFrames_rpj8t")
animation = &"shoot"
frame = 5
frame_progress = 1.0
offset = Vector2(6, -10)

[node name="BowRayCast2D" type="RayCast2D" parent="shootAnim"]
position = Vector2(16, 4.54747e-13)
rotation = -1.5708
scale = Vector2(-0.318584, 0.222122)

[node name="rundustAnim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-5, 8)
sprite_frames = SubResource("SpriteFrames_ypfy6")
animation = &"rundust"
frame = 1
frame_progress = 0.0757916
offset = Vector2(-8, -3)

[node name="dashDuration" type="Timer" parent="."]
wait_time = 0.1

[node name="dashCooldown" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="animation_finished" from="shootAnim" to="." method="_on_shoot_anim_animation_finished"]
[connection signal="timeout" from="dashDuration" to="." method="_on_dash_timer_timeout"]
